Fix flickering of editableText control in IE 10 during input.
Former-commit-id: da19ffaf7a9bcd958084c76cf727b6f5e644be29

--- a/sources/easygenerator.Web/Content/common.css
+++ b/sources/easygenerator.Web/Content/common.css
@@ -608,7 +608,6 @@ h2.page-header-title {
         -ms-resize: none;
         resize: none;
         outline: none;
-        overflow-y: hidden;
         background-color: transparent;
         color: #666;
         font-size: 14px;
@@ -649,7 +648,6 @@ h2.page-header-title {
         padding: 10px 15px 25px 15px;
         vertical-align: top;
         outline: none;
-        overflow-y: hidden;
         background-color: transparent;
         color: #666;
         font-size: 14px;
